tovian typo https://forums.linuxmint.com/viewtopic.php?f=18&t=230670&p=1223589#p1223589

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ command in your terminal to import the public key:
 <br><kbd>gpg --keyserver keyserver.ubuntu.com --recv-key "E1A3 8B8F 1446 75D0 60EA 666F 3EE6 7F3D 0FF4 05B2"</kbd>
 </br></br>
 
-<p>Now let's verify! Enter the following command into your alread-opened terminal:
+<p>Now let's verify! Enter the following command into your already-opened terminal:
 <br><kbd>gpg --verify sha256sum.txt.gpg sha256sum.txt</br></kbd></p>
 
 <p>Hopefully, you'll see something like this (for Mint 18):
