--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ is in fact the correct one. This is a two-step process for Mint:</p>
 "string" that can be used to check that a file is a perfect copy of another.</small>
 </br>
 <br>(b) Make sure that the sha256sum you are comparing yours to is correct by using GPG.
-This is actually the coolest part of the entire process - sha256sums can be faked, but
-but this step, if done properly, cannot be fooled!</br></p>
+This is actually the coolest part of the entire process - sha256sums can be
+faked, but this step, if done properly, cannot be fooled!</br></p>
 
 <p>In other words, checking the sha256sum shows that your download had no errors,
 and checking the GPG signature verifies that you have a safe, untampered iso.</p>
