made message about untrusted signature more prominent.

--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@ Primary key fingerprint: E1A3 8B8F 1446 75D0 60EA  666F 3EE6 7F3D 0FF4 05B2</pre
 <p>If you see this, then congratulations! You have successfully verified Linux
 Mint! That wasn't too hard, was it? :-)</p>
 
-<p>Don't worry about the "WARNING: This key is not certified with a trusted
+<p><font color="#DF0303">Don't worry about the "WARNING: This key is not certified with a trusted
 signature!" This only means that you have not signed the Mint key with your own
 key (which you probably don't even have); it's not a message about the safety of
-the Mint iso itself.</p>
+the Mint iso itself.</font></p>
 
 <p>On the other hand, if something is wrong, you'll see something like this:
 <pre>$ gpg --verify sha256sum.txt.gpg sha256sum.txt
